--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@ header {
     font-size: var(--font-s);
     height: 56px;
     width: 100%;
+    position: relative;
 }
 
 .header-container {
@@ -358,11 +359,73 @@ nav span img {
     z-index: 100;
 }
 
+.searchbar-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+    background-color: rgb(241, 243, 244);
+    color: rgb(25, 24, 24);
+    padding: 0 16px;
+    overflow: hidden;
+    border-bottom: 2px solid var(--primary);
+}
+
+.searchbar-container .search-input {
+    height: 100%;
+    width: 100%;
+}
+
+.searchbar-container .search-input input {
+    height: 100%;
+    width: 100%;
+    border: none;
+    background-color: transparent;
+    outline: none;
+    caret-color: var(--primary);
+    font-size: 16px;
+    line-height: 18px;
+}
+
+.search-icon svg {
+    margin-right: 8px;
+}
+
+.searchbar-container svg path {
+    fill: var(--text-dark);
+}
+
+.search-close svg {
+    margin-left: 8px;
+}
+
+.searchbar {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    display: none;
+}
+
 section.head {
     padding: 0 var(--font-s);
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+@media (min-width:759.98px) {
+    .searchbar-container {
+        max-width: 292px;
+        margin: 0 auto;
+    }
+}
+
+@media (min-width: 1023.98px) {
+    .searchbar-container {
+        max-width: 50vw;
+        margin: 0 auto;
+    }
 }
 
 .head-container {
